// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article active rendering should render active correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "padding": 16,
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Object {
          "color": "#222222",
          "fontSize": 16,
          "fontWeight": "600",
          "lineHeight": 20,
          "marginBottom": 8,
        }
      }
      testID="article-title"
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontSize": 10,
              },
              Object {
                "marginRight": 4,
              },
              Object {
                "fontFamily": "FontAwesome5Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "fontWeight": "900",
              },
            ]
          }
          testID="article-icon-playable"
        >
          
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontSize": 10,
              },
              Object {
                "marginRight": 4,
              },
              Object {
                "fontFamily": "FontAwesome5Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "fontWeight": "900",
              },
            ]
          }
          testID="article-icon-downloaded"
        >
          
        </Text>
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#888888",
              "fontSize": 11,
              "fontWeight": "100",
              "marginBottom": 8,
              "marginLeft": 2,
            }
          }
          testID="article-source-name"
        />
      </View>
      <View
        style={
          Object {
            "alignSelf": "flex-start",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={3}
          style={
            Object {
              "color": "#888888",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
          testID="article-description"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "justifyContent": "center",
          "marginLeft": 24,
          "paddingTop": 6,
          "width": 50,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#037DE2",
            "borderRadius": 50,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
            "width": 50,
          }
        }
        testID="article-play-button"
      >
        <View>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "white",
                  "fontSize": 14,
                },
                Object {},
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="article-icon-play"
          >
            
          </Text>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#888888",
            "fontSize": 12,
            "marginTop": 6,
            "textAlign": "center",
          }
        }
        testID="article-duration"
      >
        ? min
      </Text>
    </View>
  </View>
</View>
`;

exports[`Article downloaded rendering should render downloaded correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "padding": 16,
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Object {
          "color": "#222222",
          "fontSize": 16,
          "fontWeight": "600",
          "lineHeight": 20,
          "marginBottom": 8,
        }
      }
      testID="article-title"
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontSize": 10,
              },
              Object {
                "marginRight": 4,
              },
              Object {
                "fontFamily": "FontAwesome5Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "fontWeight": "900",
              },
            ]
          }
          testID="article-icon-playable"
        >
          
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#03A87C",
                "fontSize": 10,
              },
              Object {
                "marginRight": 4,
              },
              Object {
                "fontFamily": "FontAwesome5Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "fontWeight": "900",
              },
            ]
          }
          testID="article-icon-downloaded"
        >
          
        </Text>
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#888888",
              "fontSize": 11,
              "fontWeight": "100",
              "marginBottom": 8,
              "marginLeft": 2,
            }
          }
          testID="article-source-name"
        />
      </View>
      <View
        style={
          Object {
            "alignSelf": "flex-start",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={3}
          style={
            Object {
              "color": "#888888",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
          testID="article-description"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "justifyContent": "center",
          "marginLeft": 24,
          "paddingTop": 6,
          "width": 50,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#222222",
            "borderRadius": 50,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
            "width": 50,
          }
        }
        testID="article-play-button"
      >
        <View>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "white",
                  "fontSize": 14,
                },
                Object {},
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="article-icon-play"
          >
            
          </Text>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#888888",
            "fontSize": 12,
            "marginTop": 6,
            "textAlign": "center",
          }
        }
        testID="article-duration"
      >
        ? min
      </Text>
    </View>
  </View>
</View>
`;

exports[`Article full rendering should render full correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "padding": 16,
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Object {
          "color": "#222222",
          "fontSize": 16,
          "fontWeight": "600",
          "lineHeight": 20,
          "marginBottom": 8,
        }
      }
      testID="article-title"
    >
      Test title
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontSize": 10,
              },
              Object {
                "marginRight": 4,
              },
              Object {
                "fontFamily": "FontAwesome5Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "fontWeight": "900",
              },
            ]
          }
          testID="article-icon-playable"
        >
          
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontSize": 10,
              },
              Object {
                "marginRight": 4,
              },
              Object {
                "fontFamily": "FontAwesome5Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "fontWeight": "900",
              },
            ]
          }
          testID="article-icon-downloaded"
        >
          
        </Text>
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#888888",
              "fontSize": 11,
              "fontWeight": "100",
              "marginBottom": 8,
              "marginLeft": 2,
            }
          }
          testID="article-source-name"
        >
          Jordy on 
          Test
        </Text>
      </View>
      <View
        style={
          Object {
            "alignSelf": "flex-start",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={3}
          style={
            Object {
              "color": "#888888",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
          testID="article-description"
        >
          Test description
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "justifyContent": "center",
          "marginLeft": 24,
          "paddingTop": 6,
          "width": 50,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#222222",
            "borderRadius": 50,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
            "width": 50,
          }
        }
        testID="article-play-button"
      >
        <View>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "white",
                  "fontSize": 14,
                },
                Object {},
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="article-icon-play"
          >
            
          </Text>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#888888",
            "fontSize": 12,
            "marginTop": 6,
            "textAlign": "center",
          }
        }
        testID="article-duration"
      >
        2 min
      </Text>
    </View>
  </View>
</View>
`;

exports[`Article loading rendering should render loading correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "padding": 16,
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Object {
          "color": "#222222",
          "fontSize": 16,
          "fontWeight": "600",
          "lineHeight": 20,
          "marginBottom": 8,
        }
      }
      testID="article-title"
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontSize": 10,
              },
              Object {
                "marginRight": 4,
              },
              Object {
                "fontFamily": "FontAwesome5Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "fontWeight": "900",
              },
            ]
          }
          testID="article-icon-playable"
        >
          
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontSize": 10,
              },
              Object {
                "marginRight": 4,
              },
              Object {
                "fontFamily": "FontAwesome5Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "fontWeight": "900",
              },
            ]
          }
          testID="article-icon-downloaded"
        >
          
        </Text>
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#888888",
              "fontSize": 11,
              "fontWeight": "100",
              "marginBottom": 8,
              "marginLeft": 2,
            }
          }
          testID="article-source-name"
        />
      </View>
      <View
        style={
          Object {
            "alignSelf": "flex-start",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={3}
          style={
            Object {
              "color": "#888888",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
          testID="article-description"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "justifyContent": "center",
          "marginLeft": 24,
          "paddingTop": 6,
          "width": 50,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#222222",
            "borderRadius": 50,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
            "width": 50,
          }
        }
        testID="article-play-button"
      >
        <View>
          <ActivityIndicator
            animating={true}
            color="#fff"
            hidesWhenStopped={true}
            size="small"
            testID="article-activity-indicator"
          />
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#888888",
            "fontSize": 12,
            "marginTop": 6,
            "textAlign": "center",
          }
        }
        testID="article-duration"
      >
        ? min
      </Text>
    </View>
  </View>
</View>
`;

exports[`Article minimal rendering should render minimal correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "padding": 16,
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Object {
          "color": "#222222",
          "fontSize": 16,
          "fontWeight": "600",
          "lineHeight": 20,
          "marginBottom": 8,
        }
      }
      testID="article-title"
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontSize": 10,
              },
              Object {
                "marginRight": 4,
              },
              Object {
                "fontFamily": "FontAwesome5Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "fontWeight": "900",
              },
            ]
          }
          testID="article-icon-playable"
        >
          
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontSize": 10,
              },
              Object {
                "marginRight": 4,
              },
              Object {
                "fontFamily": "FontAwesome5Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "fontWeight": "900",
              },
            ]
          }
          testID="article-icon-downloaded"
        >
          
        </Text>
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#888888",
              "fontSize": 11,
              "fontWeight": "100",
              "marginBottom": 8,
              "marginLeft": 2,
            }
          }
          testID="article-source-name"
        />
      </View>
      <View
        style={
          Object {
            "alignSelf": "flex-start",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={3}
          style={
            Object {
              "color": "#888888",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
          testID="article-description"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "justifyContent": "center",
          "marginLeft": 24,
          "paddingTop": 6,
          "width": 50,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#222222",
            "borderRadius": 50,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
            "width": 50,
          }
        }
        testID="article-play-button"
      >
        <View>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "white",
                  "fontSize": 14,
                },
                Object {},
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="article-icon-play"
          >
            
          </Text>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#888888",
            "fontSize": 12,
            "marginTop": 6,
            "textAlign": "center",
          }
        }
        testID="article-duration"
      >
        ? min
      </Text>
    </View>
  </View>
</View>
`;

exports[`Article playing rendering should render playing correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "padding": 16,
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Object {
          "color": "#222222",
          "fontSize": 16,
          "fontWeight": "600",
          "lineHeight": 20,
          "marginBottom": 8,
        }
      }
      testID="article-title"
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "baseline",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontSize": 10,
              },
              Object {
                "marginRight": 4,
              },
              Object {
                "fontFamily": "FontAwesome5Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "fontWeight": "900",
              },
            ]
          }
          testID="article-icon-playable"
        >
          
        </Text>
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#cccccc",
                "fontSize": 10,
              },
              Object {
                "marginRight": 4,
              },
              Object {
                "fontFamily": "FontAwesome5Free-Solid",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "fontWeight": "900",
              },
            ]
          }
          testID="article-icon-downloaded"
        >
          
        </Text>
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#888888",
              "fontSize": 11,
              "fontWeight": "100",
              "marginBottom": 8,
              "marginLeft": 2,
            }
          }
          testID="article-source-name"
        />
      </View>
      <View
        style={
          Object {
            "alignSelf": "flex-start",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={3}
          style={
            Object {
              "color": "#888888",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
          testID="article-description"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "justifyContent": "center",
          "marginLeft": 24,
          "paddingTop": 6,
          "width": 50,
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#037DE2",
            "borderRadius": 50,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
            "width": 50,
          }
        }
        testID="article-play-button"
      >
        <View>
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "white",
                  "fontSize": 14,
                },
                Object {},
                Object {
                  "fontFamily": "FontAwesome5Free-Solid",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {
                  "fontWeight": "900",
                },
              ]
            }
            testID="article-icon-pause"
          >
            
          </Text>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#888888",
            "fontSize": 12,
            "marginTop": 6,
            "textAlign": "center",
          }
        }
        testID="article-duration"
      >
        ? min
      </Text>
    </View>
  </View>
</View>
`;
